// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerDot /> should render timer when isActive is true and showTimer is true 1`] = `
<div
  className="mfui-banner-dot mfui-banner-dot_active mfui-banner-dot_timer"
  data-root="test-id"
  onClick={[Function]}
>
  <svg
    className="mfui-banner-dot__timer"
    viewBox="0 0 100 100"
  >
    <circle
      className="mfui-banner-dot__timer-circle"
      cx="50"
      cy="50"
      r="50"
      style={
        Object {
          "animationDuration": "0s",
        }
      }
    />
  </svg>
</div>
`;

exports[`<BannerDot /> should render with className 1`] = `
<div
  className="mfui-banner-dot class"
  data-root="test-id"
  onClick={[Function]}
/>
`;

exports[`<BannerDot /> should render with props 1`] = `
<div
  className="mfui-banner-dot"
  data-root="test-id"
  onClick={[Function]}
/>
`;

exports[`<BannerDot /> should render without timer when isActive is false and showTimer is true 1`] = `
<div
  className="mfui-banner-dot mfui-banner-dot_timer"
  data-root="test-id"
  onClick={[Function]}
/>
`;

exports[`<BannerDot /> should render without timer when isActive is true and showTimer is false 1`] = `
<div
  className="mfui-banner-dot mfui-banner-dot_active"
  data-root="test-id"
  onClick={[Function]}
/>
`;
